packages/fcs-ql-parser/fcs_ql_parser-1.0.1-py2.py3-none-any.whl/fcsql/FCSParser.py
# Generated from FCSParser.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class FCSParser ( Parser ):

    grammarFileName = "FCSParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'['", "']'", "'|'", "'&'", 
                     "'!'", "'/'", "'{'", "'}'", "'+'", "'*'", "'?'", "','", 
                     "'='", "'!='", "':'", "'within'" ]

    symbolicNames = [ "<INVALID>", "L_PAREN", "R_PAREN", "L_SQUARE_BRACKET", 
                      "R_SQUARE_BRACKET", "OR", "AND", "NOT", "FWD_SLASH", 
                      "L_CURLY_BRACKET", "R_CURLY_BRACKET", "Q_ONE_OR_MORE", 
                      "Q_ZERO_OR_MORE", "Q_ZERO_OR_ONE", "Q_COMMA", "OPERATOR_EQ", 
                      "OPERATOR_NE", "COLON", "WITHIN", "SIMPLE_WITHIN_SCOPE", 
                      "REGEXP_FLAGS", "IDENTIFIER", "INTEGER", "REGEXP", 
                      "QUOTED_STRING", "Space" ]

    RULE_query = 0
    RULE_main_query = 1
    RULE_query_disjunction = 2
    RULE_query_sequence = 3
    RULE_query_group = 4
    RULE_query_simple = 5
    RULE_quantifier = 6
    RULE_query_implicit = 7
    RULE_query_segment = 8
    RULE_within_part = 9
    RULE_within_part_simple = 10
    RULE_expression = 11
    RULE_expression_or = 12
    RULE_expression_and = 13
    RULE_expression_group = 14
    RULE_expression_not = 15
    RULE_expression_basic = 16
    RULE_attribute = 17
    RULE_qualifier = 18
    RULE_identifier = 19
    RULE_regexp = 20
    RULE_regexp_pattern = 21
    RULE_regexp_flag = 22

    ruleNames =  [ "query", "main_query", "query_disjunction", "query_sequence", 
                   "query_group", "query_simple", "quantifier", "query_implicit", 
                   "query_segment", "within_part", "within_part_simple", 
                   "expression", "expression_or", "expression_and", "expression_group", 
                   "expression_not", "expression_basic", "attribute", "qualifier", 
                   "identifier", "regexp", "regexp_pattern", "regexp_flag" ]

    EOF = Token.EOF
    L_PAREN=1
    R_PAREN=2
    L_SQUARE_BRACKET=3
    R_SQUARE_BRACKET=4
    OR=5
    AND=6
    NOT=7
    FWD_SLASH=8
    L_CURLY_BRACKET=9
    R_CURLY_BRACKET=10
    Q_ONE_OR_MORE=11
    Q_ZERO_OR_MORE=12
    Q_ZERO_OR_ONE=13
    Q_COMMA=14
    OPERATOR_EQ=15
    OPERATOR_NE=16
    COLON=17
    WITHIN=18
    SIMPLE_WITHIN_SCOPE=19
    REGEXP_FLAGS=20
    IDENTIFIER=21
    INTEGER=22
    REGEXP=23
    QUOTED_STRING=24
    Space=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def main_query(self):
            return self.getTypedRuleContext(FCSParser.Main_queryContext,0)


        def EOF(self):
            return self.getToken(FCSParser.EOF, 0)

        def WITHIN(self):
            return self.getToken(FCSParser.WITHIN, 0)

        def within_part(self):
            return self.getTypedRuleContext(FCSParser.Within_partContext,0)


        def getRuleIndex(self):
            return FCSParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)




    def query(self):

        localctx = FCSParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_query)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.main_query()
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 47
                self.match(FCSParser.WITHIN)
                self.state = 48
                self.within_part()


            self.state = 51
            self.match(FCSParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_queryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def query_simple(self):
            return self.getTypedRuleContext(FCSParser.Query_simpleContext,0)


        def query_group(self):
            return self.getTypedRuleContext(FCSParser.Query_groupContext,0)


        def query_sequence(self):
            return self.getTypedRuleContext(FCSParser.Query_sequenceContext,0)


        def query_disjunction(self):
            return self.getTypedRuleContext(FCSParser.Query_disjunctionContext,0)


        def getRuleIndex(self):
            return FCSParser.RULE_main_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain_query" ):
                listener.enterMain_query(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain_query" ):
                listener.exitMain_query(self)




    def main_query(self):

        localctx = FCSParser.Main_queryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_main_query)
        try:
            self.state = 57
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.query_simple()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.query_group()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 55
                self.query_sequence()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 56
                self.query_disjunction()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Query_disjunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def query_simple(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FCSParser.Query_simpleContext)
            else:
                return self.getTypedRuleContext(FCSParser.Query_simpleContext,i)


        def query_sequence(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FCSParser.Query_sequenceContext)
            else:
                return self.getTypedRuleContext(FCSParser.Query_sequenceContext,i)


        def query_group(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FCSParser.Query_groupContext)
            else:
                return self.getTypedRuleContext(FCSParser.Query_groupContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(FCSParser.OR)
            else:
                return self.getToken(FCSParser.OR, i)

        def getRuleIndex(self):
            return FCSParser.RULE_query_disjunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery_disjunction" ):
                listener.enterQuery_disjunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery_disjunction" ):
                listener.exitQuery_disjunction(self)




    def query_disjunction(self):

        localctx = FCSParser.Query_disjunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_query_disjunction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 59
                self.query_simple()
                pass

            elif la_ == 2:
                self.state = 60
                self.query_sequence()
                pass

            elif la_ == 3:
                self.state = 61
                self.query_group()
                pass


            self.state = 70 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 64
                self.match(FCSParser.OR)
                self.state = 68
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 65
                    self.query_simple()
                    pass

                elif la_ == 2:
                    self.state = 66
                    self.query_sequence()
                    pass

                elif la_ == 3:
                    self.state = 67
                    self.query_group()
                    pass


                self.state = 72 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==5):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Query_sequenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def query_simple(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FCSParser.Query_simpleContext)
            else:
                return self.getTypedRuleContext(FCSParser.Query_simpleContext,i)


        def query_group(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FCSParser.Query_groupContext)
            else:
                return self.getTypedRuleContext(FCSParser.Query_groupContext,i)


        def getRuleIndex(self):
            return FCSParser.RULE_query_sequence

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery_sequence" ):
                listener.enterQuery_sequence(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery_sequence" ):
                listener.exitQuery_sequence(self)




    def query_sequence(self):

        localctx = FCSParser.Query_sequenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_query_sequence)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 76
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [3, 23]:
                    self.state = 74
                    self.query_simple()
                    pass
                elif token in [1]:
                    self.state = 75
                    self.query_group()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 78 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 8388618) != 0):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Query_groupContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_PAREN(self):
            return self.getToken(FCSParser.L_PAREN, 0)

        def R_PAREN(self):
            return self.getToken(FCSParser.R_PAREN, 0)

        def query_disjunction(self):
            return self.getTypedRuleContext(FCSParser.Query_disjunctionContext,0)


        def query_sequence(self):
            return self.getTypedRuleContext(FCSParser.Query_sequenceContext,0)


        def quantifier(self):
            return self.getTypedRuleContext(FCSParser.QuantifierContext,0)


        def getRuleIndex(self):
            return FCSParser.RULE_query_group

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery_group" ):
                listener.enterQuery_group(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery_group" ):
                listener.exitQuery_group(self)




    def query_group(self):

        localctx = FCSParser.Query_groupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_query_group)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(FCSParser.L_PAREN)
            self.state = 83
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 81
                self.query_disjunction()
                pass

            elif la_ == 2:
                self.state = 82
                self.query_sequence()
                pass


            self.state = 85
            self.match(FCSParser.R_PAREN)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3f) == 0 and ((1 << _la) & 14848) != 0:
                self.state = 86
                self.quantifier()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Query_simpleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def query_implicit(self):
            return self.getTypedRuleContext(FCSParser.Query_implicitContext,0)


        def query_segment(self):
            return self.getTypedRuleContext(FCSParser.Query_segmentContext,0)


        def quantifier(self):
            return self.getTypedRuleContext(FCSParser.QuantifierContext,0)


        def getRuleIndex(self):
            return FCSParser.RULE_query_simple

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery_simple" ):
                listener.enterQuery_simple(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery_simple" ):
                listener.exitQuery_simple(self)




    def query_simple(self):

        localctx = FCSParser.Query_simpleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_query_simple)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23]:
                self.state = 89
                self.query_implicit()
                pass
            elif token in [3]:
                self.state = 90
                self.query_segment()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3f) == 0 and ((1 << _la) & 14848) != 0:
                self.state = 93
                self.quantifier()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuantifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Q_ONE_OR_MORE(self):
            return self.getToken(FCSParser.Q_ONE_OR_MORE, 0)

        def Q_ZERO_OR_MORE(self):
            return self.getToken(FCSParser.Q_ZERO_OR_MORE, 0)

        def Q_ZERO_OR_ONE(self):
            return self.getToken(FCSParser.Q_ZERO_OR_ONE, 0)

        def L_CURLY_BRACKET(self):
            return self.getToken(FCSParser.L_CURLY_BRACKET, 0)

        def R_CURLY_BRACKET(self):
            return self.getToken(FCSParser.R_CURLY_BRACKET, 0)

        def INTEGER(self, i:int=None):
            if i is None:
                return self.getTokens(FCSParser.INTEGER)
            else:
                return self.getToken(FCSParser.INTEGER, i)

        def Q_COMMA(self):
            return self.getToken(FCSParser.Q_COMMA, 0)

        def getRuleIndex(self):
            return FCSParser.RULE_quantifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuantifier" ):
                listener.enterQuantifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuantifier" ):
                listener.exitQuantifier(self)




    def quantifier(self):

        localctx = FCSParser.QuantifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_quantifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.state = 96
                self.match(FCSParser.Q_ONE_OR_MORE)
                pass
            elif token in [12]:
                self.state = 97
                self.match(FCSParser.Q_ZERO_OR_MORE)
                pass
            elif token in [13]:
                self.state = 98
                self.match(FCSParser.Q_ZERO_OR_ONE)
                pass
            elif token in [9]:
                self.state = 99
                self.match(FCSParser.L_CURLY_BRACKET)
                self.state = 111
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                if la_ == 1:
                    self.state = 100
                    self.match(FCSParser.INTEGER)
                    pass

                elif la_ == 2:
                    self.state = 102
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==22:
                        self.state = 101
                        self.match(FCSParser.INTEGER)


                    self.state = 104
                    self.match(FCSParser.Q_COMMA)
                    self.state = 105
                    self.match(FCSParser.INTEGER)
                    pass

                elif la_ == 3:
                    self.state = 106
                    self.match(FCSParser.INTEGER)
                    self.state = 107
                    self.match(FCSParser.Q_COMMA)
                    self.state = 109
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==22:
                        self.state = 108
                        self.match(FCSParser.INTEGER)


                    pass


                self.state = 113
                self.match(FCSParser.R_CURLY_BRACKET)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Query_implicitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def regexp(self):
            return self.getTypedRuleContext(FCSParser.RegexpContext,0)


        def getRuleIndex(self):
            return FCSParser.RULE_query_implicit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery_implicit" ):
                listener.enterQuery_implicit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery_implicit" ):
                listener.exitQuery_implicit(self)




    def query_implicit(self):

        localctx = FCSParser.Query_implicitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_query_implicit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.regexp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Query_segmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_SQUARE_BRACKET(self):
            return self.getToken(FCSParser.L_SQUARE_BRACKET, 0)

        def R_SQUARE_BRACKET(self):
            return self.getToken(FCSParser.R_SQUARE_BRACKET, 0)

        def expression(self):
            return self.getTypedRuleContext(FCSParser.ExpressionContext,0)


        def getRuleIndex(self):
            return FCSParser.RULE_query_segment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery_segment" ):
                listener.enterQuery_segment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery_segment" ):
                listener.exitQuery_segment(self)




    def query_segment(self):

        localctx = FCSParser.Query_segmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_query_segment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(FCSParser.L_SQUARE_BRACKET)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3f) == 0 and ((1 << _la) & 3932290) != 0:
                self.state = 119
                self.expression()


            self.state = 122
            self.match(FCSParser.R_SQUARE_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Within_partContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def within_part_simple(self):
            return self.getTypedRuleContext(FCSParser.Within_part_simpleContext,0)


        def getRuleIndex(self):
            return FCSParser.RULE_within_part

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWithin_part" ):
                listener.enterWithin_part(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWithin_part" ):
                listener.exitWithin_part(self)




    def within_part(self):

        localctx = FCSParser.Within_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_within_part)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.within_part_simple()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Within_part_simpleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SIMPLE_WITHIN_SCOPE(self):
            return self.getToken(FCSParser.SIMPLE_WITHIN_SCOPE, 0)

        def getRuleIndex(self):
            return FCSParser.RULE_within_part_simple

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWithin_part_simple" ):
                listener.enterWithin_part_simple(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWithin_part_simple" ):
                listener.exitWithin_part_simple(self)




    def within_part_simple(self):

        localctx = FCSParser.Within_part_simpleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_within_part_simple)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(FCSParser.SIMPLE_WITHIN_SCOPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression_basic(self):
            return self.getTypedRuleContext(FCSParser.Expression_basicContext,0)


        def expression_not(self):
            return self.getTypedRuleContext(FCSParser.Expression_notContext,0)


        def expression_group(self):
            return self.getTypedRuleContext(FCSParser.Expression_groupContext,0)


        def expression_or(self):
            return self.getTypedRuleContext(FCSParser.Expression_orContext,0)


        def expression_and(self):
            return self.getTypedRuleContext(FCSParser.Expression_andContext,0)


        def getRuleIndex(self):
            return FCSParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = FCSParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expression)
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.expression_basic()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.expression_not()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 130
                self.expression_group()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 131
                self.expression_or()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 132
                self.expression_and()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression_orContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression_basic(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FCSParser.Expression_basicContext)
            else:
                return self.getTypedRuleContext(FCSParser.Expression_basicContext,i)


        def expression_group(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FCSParser.Expression_groupContext)
            else:
                return self.getTypedRuleContext(FCSParser.Expression_groupContext,i)


        def expression_not(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FCSParser.Expression_notContext)
            else:
                return self.getTypedRuleContext(FCSParser.Expression_notContext,i)


        def expression_and(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FCSParser.Expression_andContext)
            else:
                return self.getTypedRuleContext(FCSParser.Expression_andContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(FCSParser.OR)
            else:
                return self.getToken(FCSParser.OR, i)

        def getRuleIndex(self):
            return FCSParser.RULE_expression_or

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression_or" ):
                listener.enterExpression_or(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression_or" ):
                listener.exitExpression_or(self)




    def expression_or(self):

        localctx = FCSParser.Expression_orContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expression_or)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.state = 135
                self.expression_basic()
                pass

            elif la_ == 2:
                self.state = 136
                self.expression_group()
                pass

            elif la_ == 3:
                self.state = 137
                self.expression_not()
                pass

            elif la_ == 4:
                self.state = 138
                self.expression_and()
                pass


            self.state = 148 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 141
                    self.match(FCSParser.OR)
                    self.state = 146
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
                    if la_ == 1:
                        self.state = 142
                        self.expression_basic()
                        pass

                    elif la_ == 2:
                        self.state = 143
                        self.expression_group()
                        pass

                    elif la_ == 3:
                        self.state = 144
                        self.expression_not()
                        pass

                    elif la_ == 4:
                        self.state = 145
                        self.expression_and()
                        pass



                else:
                    raise NoViableAltException(self)
                self.state = 150 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,19,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression_andContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression_basic(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FCSParser.Expression_basicContext)
            else:
                return self.getTypedRuleContext(FCSParser.Expression_basicContext,i)


        def expression_group(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FCSParser.Expression_groupContext)
            else:
                return self.getTypedRuleContext(FCSParser.Expression_groupContext,i)


        def expression_not(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FCSParser.Expression_notContext)
            else:
                return self.getTypedRuleContext(FCSParser.Expression_notContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(FCSParser.AND)
            else:
                return self.getToken(FCSParser.AND, i)

        def getRuleIndex(self):
            return FCSParser.RULE_expression_and

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression_and" ):
                listener.enterExpression_and(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression_and" ):
                listener.exitExpression_and(self)




    def expression_and(self):

        localctx = FCSParser.Expression_andContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_expression_and)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [18, 19, 20, 21]:
                self.state = 152
                self.expression_basic()
                pass
            elif token in [1]:
                self.state = 153
                self.expression_group()
                pass
            elif token in [7]:
                self.state = 154
                self.expression_not()
                pass
            else:
                raise NoViableAltException(self)
